third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/move_full_invalid.exp

Diagnostics:
error: cannot move local `x` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_full_invalid.move:13:9
   │
12 │         let f = &x;
   │                 -- local `x` previously borrowed here
13 │         move x;
   │         ^^^^^^ move attempted here
14 │         *f;
   │         -- conflicting reference `f` used here

error: cannot move local `x` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_full_invalid.move:18:9
   │
17 │         let f = &mut x;
   │                 ------ local `x` previously mutably borrowed here
18 │         move x;
   │         ^^^^^^ move attempted here
19 │         *f;
   │         -- conflicting reference `f` used here

error: cannot move local `x` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_full_invalid.move:23:9
   │
22 │         let f = id(&x);
   │                 ------ local `x` previously borrowed here
23 │         move x;
   │         ^^^^^^ move attempted here
24 │         *f;
   │         -- conflicting reference `f` used here

error: cannot move local `x` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_full_invalid.move:28:9
   │
27 │         let f = id_mut(&mut x);
   │                 -------------- local `x` previously mutably borrowed here
28 │         move x;
   │         ^^^^^^ move attempted here
29 │         *f;
   │         -- conflicting reference `f` used here
